@@ -75,6 +75,11 @@
         return isHostObject(doc, 'createRange');
       }
 
+      function DOCUMENT_RANGE_CREATE_CONTEXTUAL_FRAGMENT() {
+        if (Feature('DOCUMENT_RANGE'))
+          return isHostObject(doc.createRange(), 'createContextualFragment');
+      }
+
       function DOCUMENT_STYLE_SHEETS_COLLECTION() {
         // true for all so far
         return isHostObject(doc, 'styleSheets');
@@ -270,41 +275,42 @@
       })();
 
       return {
-        'ARRAY_SLICE_THIS_AS_NODELIST':       ARRAY_SLICE_THIS_AS_NODELIST,
-        'CREATE_ELEMENT_WITH_HTML':           CREATE_ELEMENT_WITH_HTML,
-        'DOCUMENT_ALL_COLLECTION':            DOCUMENT_ALL_COLLECTION,
-        'DOCUMENT_CREATE_EVENT':              DOCUMENT_CREATE_EVENT,
-        'DOCUMENT_CREATE_EVENT_OBJECT':       DOCUMENT_CREATE_EVENT_OBJECT,
-        'DOCUMENT_RANGE':                     DOCUMENT_RANGE,
-        'DOCUMENT_STYLE_SHEETS_COLLECTION':   DOCUMENT_STYLE_SHEETS_COLLECTION,
-        'ELEMENT_ADD_EVENT_LISTENER':         ELEMENT_ADD_EVENT_LISTENER,
-        'ELEMENT_ATTACH_EVENT':               ELEMENT_ATTACH_EVENT,
-        'ELEMENT_BOUNDING_CLIENT_RECT':       ELEMENT_BOUNDING_CLIENT_RECT,
-        'ELEMENT_CHILDREN_NODELIST':          ELEMENT_CHILDREN_NODELIST,
-        'ELEMENT_CLASS':                      ELEMENT_CLASS,
-        'ELEMENT_CLIENT_COORDS':              ELEMENT_CLIENT_COORDS,
-        'ELEMENT_COMPARE_DOCUMENT_POSITION':  ELEMENT_COMPARE_DOCUMENT_POSITION,
-        'ELEMENT_COMPUTED_STYLE':             ELEMENT_COMPUTED_STYLE,
-        'ELEMENT_CONTAINS':                   ELEMENT_CONTAINS,
-        'ELEMENT_CURRENT_STYLE':              ELEMENT_CURRENT_STYLE,
-        'ELEMENT_DISPATCH_EVENT':             ELEMENT_DISPATCH_EVENT,
-        'ELEMENT_DO_SCROLL':                  ELEMENT_DO_SCROLL,
-        'ELEMENT_EXTENSIONS':                 ELEMENT_EXTENSIONS,
-        'ELEMENT_FIRE_EVENT':                 ELEMENT_FIRE_EVENT,
-        'ELEMENT_GET_ATTRIBUTE_IFLAG':        ELEMENT_GET_ATTRIBUTE_IFLAG,
-        'ELEMENT_INNER_TEXT':                 ELEMENT_INNER_TEXT,
-        'ELEMENT_MS_CSS_FILTERS':             ELEMENT_MS_CSS_FILTERS,
-        'ELEMENT_REMOVE_NODE':                ELEMENT_REMOVE_NODE,
-        'ELEMENT_SOURCE_INDEX':               ELEMENT_SOURCE_INDEX,
-        'ELEMENT_SPECIFIC_EXTENSIONS':        ELEMENT_SPECIFIC_EXTENSIONS,
-        'ELEMENT_TEXT_CONTENT':               ELEMENT_TEXT_CONTENT,
-        'EMULATE_ELEMENT_CLASSES_WITH_PROTO': EMULATE_ELEMENT_CLASSES_WITH_PROTO,
-        'FUNCTION_TO_STRING_RETURNS_SOURCE':  FUNCTION_TO_STRING_RETURNS_SOURCE,
-        'HTML_ELEMENT_CLASS':                 HTML_ELEMENT_CLASS,
-        'OBJECT_PROTO':                       OBJECT_PROTO,
-        'SELECTORS_API':                      SELECTORS_API,
-        'TYPEOF_NODELIST_IS_FUNCTION':        TYPEOF_NODELIST_IS_FUNCTION,
-        'XPATH':                              XPATH
+        'ARRAY_SLICE_THIS_AS_NODELIST':              ARRAY_SLICE_THIS_AS_NODELIST,
+        'CREATE_ELEMENT_WITH_HTML':                  CREATE_ELEMENT_WITH_HTML,
+        'DOCUMENT_ALL_COLLECTION':                   DOCUMENT_ALL_COLLECTION,
+        'DOCUMENT_CREATE_EVENT':                     DOCUMENT_CREATE_EVENT,
+        'DOCUMENT_CREATE_EVENT_OBJECT':              DOCUMENT_CREATE_EVENT_OBJECT,
+        'DOCUMENT_RANGE':                            DOCUMENT_RANGE,
+        'DOCUMENT_RANGE_CREATE_CONTEXTUAL_FRAGMENT': DOCUMENT_RANGE_CREATE_CONTEXTUAL_FRAGMENT,
+        'DOCUMENT_STYLE_SHEETS_COLLECTION':          DOCUMENT_STYLE_SHEETS_COLLECTION,
+        'ELEMENT_ADD_EVENT_LISTENER':                ELEMENT_ADD_EVENT_LISTENER,
+        'ELEMENT_ATTACH_EVENT':                      ELEMENT_ATTACH_EVENT,
+        'ELEMENT_BOUNDING_CLIENT_RECT':              ELEMENT_BOUNDING_CLIENT_RECT,
+        'ELEMENT_CHILDREN_NODELIST':                 ELEMENT_CHILDREN_NODELIST,
+        'ELEMENT_CLASS':                             ELEMENT_CLASS,
+        'ELEMENT_CLIENT_COORDS':                     ELEMENT_CLIENT_COORDS,
+        'ELEMENT_COMPARE_DOCUMENT_POSITION':         ELEMENT_COMPARE_DOCUMENT_POSITION,
+        'ELEMENT_COMPUTED_STYLE':                    ELEMENT_COMPUTED_STYLE,
+        'ELEMENT_CONTAINS':                          ELEMENT_CONTAINS,
+        'ELEMENT_CURRENT_STYLE':                     ELEMENT_CURRENT_STYLE,
+        'ELEMENT_DISPATCH_EVENT':                    ELEMENT_DISPATCH_EVENT,
+        'ELEMENT_DO_SCROLL':                         ELEMENT_DO_SCROLL,
+        'ELEMENT_EXTENSIONS':                        ELEMENT_EXTENSIONS,
+        'ELEMENT_FIRE_EVENT':                        ELEMENT_FIRE_EVENT,
+        'ELEMENT_GET_ATTRIBUTE_IFLAG':               ELEMENT_GET_ATTRIBUTE_IFLAG,
+        'ELEMENT_INNER_TEXT':                        ELEMENT_INNER_TEXT,
+        'ELEMENT_MS_CSS_FILTERS':                    ELEMENT_MS_CSS_FILTERS,
+        'ELEMENT_REMOVE_NODE':                       ELEMENT_REMOVE_NODE,
+        'ELEMENT_SOURCE_INDEX':                      ELEMENT_SOURCE_INDEX,
+        'ELEMENT_SPECIFIC_EXTENSIONS':               ELEMENT_SPECIFIC_EXTENSIONS,
+        'ELEMENT_TEXT_CONTENT':                      ELEMENT_TEXT_CONTENT,
+        'EMULATE_ELEMENT_CLASSES_WITH_PROTO':        EMULATE_ELEMENT_CLASSES_WITH_PROTO,
+        'FUNCTION_TO_STRING_RETURNS_SOURCE':         FUNCTION_TO_STRING_RETURNS_SOURCE,
+        'HTML_ELEMENT_CLASS':                        HTML_ELEMENT_CLASS,
+        'OBJECT_PROTO':                              OBJECT_PROTO,
+        'SELECTORS_API':                             SELECTORS_API,
+        'TYPEOF_NODELIST_IS_FUNCTION':               TYPEOF_NODELIST_IS_FUNCTION,
+        'XPATH':                                     XPATH
       };
     })());
 
