@@ -1,3 +1,7 @@
+* Allow Element#insert, Element#update, and Element#replace to insert comment, document fragment, document type, and text nodes. [jddalton]
+
+* Fix Element#update error on `buggy elements` when appending an element created by `toElement`. [jddalton]
+
 * Optimize Array#inject to use Array#reduce if available. [jddalton, kangax]
 
 * Fix bug in Array#concat substitution that caused it to exit early for falsy values. [jddalton]
